[feat] 블랙리스트 신청 페이지 구현
판매자 블랙리스트 신청 및 취소 페이지 구현

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <a href="/seller/lineup-page">
+    <a href="/seller/templates/lineup-page">
         <div>WAITING CATCH</div>
     </a>
     <nav>
@@ -29,10 +29,11 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup-page">줄서기 현황</a>
+        <a href="/seller/templates/lineup-page">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu" style="color: #8B60C7">메뉴</a>
         <a href="/event">이벤트</a>
+        <a href="/seller/templates/blacklist-demand-page">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
