--- a/src/main/resources/templates/seller-info.html
+++ b/src/main/resources/templates/seller-info.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>판매자 수정</h1>
-<form th:action="@{/seller/infos}" method="post" enctype="multipart/form-data">
+<form th:action="@{/seller/info}" method="post" enctype="multipart/form-data">
     <input type="hidden" name="_method" value="PUT"/>
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
