--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <header>
-    <a href="/seller/lineup-page">
+    <a href="/seller/templates/lineup-page">
         <div>WAITING CATCH</div>
     </a>
     <nav>
@@ -28,10 +28,11 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup-page">줄서기 현황</a>
+        <a href="/seller/templates/lineup-page">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu">메뉴</a>
         <a href="/event" style="color: #8B60C7">이벤트</a>
+        <a href="/seller/templates/blacklist-demand-page">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
