--- a/src/main/resources/templates/seller/blacklist-demand-list.html
+++ b/src/main/resources/templates/seller/blacklist-demand-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div id="blacklistDemandList">
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
             <th>이름</th>
