--- a/src/main/resources/templates/seller/blacklist-demand.html
+++ b/src/main/resources/templates/seller/blacklist-demand.html
@@ -2,17 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>블랙리스트 요청</title>
+    <title>줄서기 현황</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
+    <link type="text/css" th:href="@{/css/admin-style.css}" rel="stylesheet">
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
 </head>
 <body>
-<button type="button" onclick="createBlacklistDemand()">블랙리스트 요청</button>
-<div id="blacklistDemandList"></div>
+<header>
+    <a href="/seller/templates/lineup-page">
+        <div>WAITING CATCH</div>
+    </a>
+    <nav>
+        <ul>
+            <a href="/">판매자 님</a>
+            <a href="../hello.html" th:href="@{/hello}" th:method="get">
+                <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
+            </a>
+        </ul>
+    </nav>
+</header>
+<nav class="menus">
+    <ul>
+        <a href="/seller/templates/lineup-page">줄서기 현황</a>
+        <a href="/seller">매장 관리</a>
+        <a href="/menu">메뉴</a>
+        <a href="/event">이벤트</a>
+        <a href="/seller/templates/blacklist-demand-page" style="color: #8B60C7">블랙리스트</a>
+    </ul>
+</nav>
+<div class="body">
+    <div class="lineup-main">
+        <h1 style="color: #8B60C7">블랙리스트 요청 목록</h1>
+    </div>
+    <div id="blacklistDemandList"></div>
+</div>
 </body>
 <script>
     $(document).ready(function () {
         $.ajax({
-            url: '/general/seller/restaurant/blacklist-demands',
+            url: '/seller/blacklist-demands',
             type: 'GET',
             headers: {
                 'Authorization': localStorage.getItem('accessToken')
@@ -21,9 +55,5 @@
             $('#blacklistDemandList').replaceWith(result);
         })
     });
-
-    function createBlacklistDemand() {
-        window.location.href=
-    }
 </script>
 </html>
