[fix] 판매자요청 api url 수정 및 기타사항 수정

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -196,7 +196,7 @@
 
             $.ajax({
                 type: 'POST',
-                url: `/api/seller/demand`,
+                url: `/api/general/demand`,
                 contentType: "application/json",
                 data: JSON.stringify({
                     username: username,
