--- a/src/main/resources/static/css/admin-style.css
+++ b/src/main/resources/static/css/admin-style.css
@@ -131,8 +131,7 @@ header > a > div {
 }
 
 .body {
-    max-width: 1000px;
-    width: 80%;
+    width: 90%;
 
     margin: 50px auto 20px auto;
 }
@@ -143,6 +142,14 @@ header > a > div {
 }
 
 .btn {
+    color: white;
+    background-color: #8B60C7;
+
+    padding: 0 5px 0 5px;
+    margin: 5px 5px 5px 5px;
+}
+
+button {
     color: white;
     background-color: #8B60C7;
 
