[refactor] 판매자 페이지 줄서기 및 블랙리스트 신청 페이지 컨트롤러 하나만 거치게 수정
줄서기 및 블랙리스트 신청 페이지 컨트롤러 하나만 거치게 수정

--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -28,11 +28,11 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/templates/lineup-page">줄서기 현황</a>
+        <a href="/seller/lineup">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu">메뉴</a>
         <a href="/event" style="color: #8B60C7">이벤트</a>
-        <a href="/seller/templates/blacklist-demand-page">블랙리스트</a>
+        <a href="/seller/blacklist-demands">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
