--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,10 +60,7 @@
             data: JSON.stringify({username: username, password: password}),
             success: function (response, status, xhr) {
                 if (response === 'success') {
-                    let host = window.location.host;
-                    let url = host + '/seller';
-
-                    window.location.href = 'http://' + url;
+                    window.location.href = '/seller';
                     localStorage.setItem('accessToken', xhr.getResponseHeader('Authorization'))
                 } else {
                     alert('로그인에 실패하셨습니다. 다시 로그인해 주세요.')
@@ -72,6 +69,5 @@
             }
         })
     }
-
 </script>
 </html>
