--- a/src/main/resources/templates/seller/blacklist-demand.html
+++ b/src/main/resources/templates/seller/blacklist-demand.html
@@ -29,31 +29,89 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/templates/lineup-page">줄서기 현황</a>
+        <a href="/seller/lineup">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu">메뉴</a>
         <a href="/event">이벤트</a>
-        <a href="/seller/templates/blacklist-demand-page" style="color: #8B60C7">블랙리스트</a>
+        <a href="/seller/blacklist-demands" style="color: #8B60C7">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
     <div class="lineup-main">
         <h1 style="color: #8B60C7">블랙리스트 요청 목록</h1>
     </div>
-    <div id="blacklistDemandList"></div>
+    <div>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>이름</th>
+                <th>사유</th>
+                <th>상태</th>
+                <th>등록 시간</th>
+                <th>수정 시간</th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody id="blacklistDemand">
+
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 <script>
     $(document).ready(function () {
+        blacklistDemandList();
+    });
+
+    function blacklistDemandList() {
         $.ajax({
-            url: '/seller/blacklist-demands',
             type: 'GET',
+            url: '/api/seller/blacklist-demands',
             headers: {
                 'Authorization': localStorage.getItem('accessToken')
+            },
+            success: function (response) {
+                let rows = response['data'];
+                for (let i = 0; i < rows.length; i++) {
+                    let id = rows[i]['id'];
+                    let customerName = rows[i]['customerName'];
+                    let description = rows[i]['description'];
+                    let status = rows[i]['status'];
+                    let createdDate = rows[i]['createdDate'];
+                    let modifiedDate = rows[i]['modifiedDate'];
+
+                    let temp_html = `<tr>
+                                        <td>${customerName}</td>
+                                        <td>${description}</td>
+                                        <td>${status}</td>
+                                        <td>${createdDate}</td>
+                                        <td>${modifiedDate}</td>
+                                        <td>
+                                            <button type="button" class="btn" onclick="cancel('${id}')">취소</button>
+                                        </td>
+                                    </tr>`;
+                    $('#blacklistDemand').prepend(temp_html);
+                }
+            },
+        });
+    }
+
+    function cancel(blacklistDemandId) {
+        $.ajax({
+            url: `/api/seller/blacklist-demands/${blacklistDemandId}`,
+            type: 'DELETE',
+            headers: {
+                'Authorization': localStorage.getItem('accessToken')
+            },
+            success: function () {
+                alert("블랙리스트 신청 취소 처리 완료");
+                window.location.reload();
+            },
+            error: function (response) {
+                alert(response.responseJSON.message);
             }
-        }).done(function (result) {
-            $('#blacklistDemandList').replaceWith(result);
         })
-    });
+    }
 </script>
 </html>
