[refactor] api url 올바르게 수정
api url 올바르게 수정

--- a/src/main/resources/templates/seller/blacklist-demand.html
+++ b/src/main/resources/templates/seller/blacklist-demand.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header>
-    <a href="/seller/templates/lineup-page">
+    <a href="/seller/templates/lineup">
         <div>WAITING CATCH</div>
     </a>
     <nav>
@@ -29,11 +29,11 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup">줄서기 현황</a>
+        <a href="/seller/templates/lineup">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu">메뉴</a>
         <a href="/event">이벤트</a>
-        <a href="/seller/blacklist-demands" style="color: #8B60C7">블랙리스트</a>
+        <a href="/seller/templates/blacklist-demands" style="color: #8B60C7">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
