--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -28,7 +28,7 @@
 </header>
 <nav class="menus">
     <ul>
-        <a href="/seller/lineup">줄서기 현황</a>
+        <a href="/seller/templates/lineup">줄서기 현황</a>
         <a href="/seller">매장 관리</a>
         <a href="/menu">메뉴</a>
         <a href="/event" style="color: #8B60C7">이벤트</a>
