[refactor] 테스트코드 수정 및 불필요한 파일 삭제

--- a/src/main/resources/templates/seller/menu.html
+++ b/src/main/resources/templates/seller/menu.html
@@ -21,7 +21,7 @@
     <nav>
         <ul>
             <a href="/">판매자 님</a>
-            <a href="hello.html" th:href="@{/hello}" th:method="get">
+            <a href="/seller/seller.html" th:href="@{/hello}" th:method="get">
                 <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
             </a>
         </ul>
