--- a/src/main/resources/templates/admin/user-list.html
+++ b/src/main/resources/templates/admin/user-list.html
@@ -190,6 +190,16 @@
 </nav>
 <!--페이징끝-->
 
-
+<script th:inline="javascript">
+    $(document).ready(function () {
+            const token = [[${accessToken}]];
+            if (token) {
+                document.cookie =
+                    'Authorization' + "=" + token + "; " +
+                    "path=/; expires=" + (new Date().getTime() + 30 * 60000) + ";";
+            }
+        }
+    )
+</script>
 </body>
 </html>
