--- a/src/main/resources/templates/admin/blacklist.html
+++ b/src/main/resources/templates/admin/blacklist.html
@@ -56,6 +56,25 @@
 
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <div id="blacklistRequestPagination">
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">1</a></li>-->
+                <!--            <li class="page-item active"><a style="background-color: #8B60C7" class="page-link" href="#">2</a></li>-->
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">3</a></li>-->
+            </div>
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
     <br>
     <h1 style="color: #8B60C7">블랙리스트</h1>
     <table class="table table-striped">
@@ -71,6 +90,25 @@
 
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <div id="blacklistPagination">
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">1</a></li>-->
+                <!--            <li class="page-item active"><a style="background-color: #8B60C7" class="page-link" href="#">2</a></li>-->
+                <!--            <li class="page-item"><a style="color: #8B60C7" class="page-link" href="#">3</a></li>-->
+            </div>
+            <li class="page-item">
+                <a style="color: #8B60C7" class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 <script th:inline="javascript">
     $(document).ready(function () {
