[fix] #198 모든 페이지 로그아웃 정상 작동

--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -46,6 +46,7 @@
             src="/static/js/admin.js"
             th:src="@{/js/admin.js}"
     ></script>
+    <script type="text/javascript" th:src="@{/js/admin/basic.js}"></script>
     <title>WAITING CATCH 관리자</title>
 </head>
 <body>
