--- a/src/main/resources/templates/seller/event-create-creator.html
+++ b/src/main/resources/templates/seller/event-create-creator.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>쿠폰 생성자 추가</h1>
-<form th:action="@{/api/seller/event/couponcreator/{eventId}(eventId=${eventId})}" method="post"
+<form th:action="@{/api/seller/events/{eventId}/coupon-creators(eventId=${eventId})}" method="post"
       enctype="multipart/form-data">
     <label for="name">name</label>
     <input type="text" id="name" name="name"><br>
