--- a/src/main/resources/templates/seller/event-update-creator.html
+++ b/src/main/resources/templates/seller/event-update-creator.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>쿠폰 생성자 수정</h1>
-<form th:action="@{/api/seller/event/updateCouponCreator/{eventId}/{creatorId}/{creatorId}(eventId=${eventId},creatorId=${creatorId})}"
+<form th:action="@{/api/seller/events/{eventId}/coupon-creators/{creatorId}(eventId=${eventId},creatorId=${creatorId})}"
       method="post" enctype="multipart/form-data">
     <input type="hidden" name="_method" value="PUT"/>
     <label for="name">name</label>
