--- a/src/main/resources/templates/seller/event.html
+++ b/src/main/resources/templates/seller/event.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>이벤트 페이지</title>
@@ -14,13 +14,13 @@
 </head>
 <body>
 <header>
-    <a href="/seller/templates/lineup-page">
+    <a href="/seller/templates/lineup">
         <div>WAITING CATCH</div>
     </a>
     <nav>
         <ul>
             <a href="/">판매자 님</a>
-            <a href="/seller/seller.html" th:href="@{/hello}" th:method="get">
+            <a th:href="@{/api/seller/logout}" th:method="get" enctype="multipart/form-data">
                 <button onclick="sendTokenLogout()" type="button" class="btn">Logout</button>
             </a>
         </ul>
@@ -29,17 +29,17 @@
 <nav class="menus">
     <ul>
         <a href="/seller/templates/lineup">줄서기 현황</a>
-        <a href="/seller/templates/seller">매장 관리</a>
+        <a href="/seller/templates/seller" style="color: #8B60C7">매장 관리</a>
         <a href="/seller/templates/menu">메뉴</a>
-        <a href="/seller/templates/event" style="color: #8B60C7">이벤트</a>
-        <a href="/seller/blacklist-demands">블랙리스트</a>
+        <a href="/seller/templates/event">이벤트</a>
+        <a href="/seller/templates/blacklist-demands">블랙리스트</a>
     </ul>
 </nav>
 <div class="body">
     <div class="sellerEvent">
         <h1 style="color: #8B60C7">이벤트</h1>
 
-        <a href="/seller/templates/event/new">
+        <a href="/seller/templates/event/creator">
             <button type="text" class="btn">새로운 이벤트 생성</button>
         </a>
     </div>
@@ -70,24 +70,24 @@
                                 <span th:text="${couponCreator.discountPrice}"></span>
                                 <span th:text="${couponCreator.discountType}"></span>
                                 <span th:text="${couponCreator.expireDate}"></span>
-                                <a th:href="@{/seller/templates/event/updateCouponCreator/{eventId}/{creatorId}(eventId=${event.eventId},creatorId=${couponCreator.id})}">
+                                <a th:href="@{/seller/templates/events/{eventId}/coupon-creators/{creatorId}(eventId=${event.eventId},creatorId=${couponCreator.id})}">
                                     <button type="button" class="btn">수정</button>
                                 </a>
                             </li>
                         </ul>
                     </td>
                     <td>
-                        <a th:href="@{/seller/templates/event/couponcreator/{eventId}(eventId=${event.eventId})}">
+                        <a th:href="@{/seller/templates/events/{eventId}/coupon-creators(eventId=${event.eventId})}">
                             <button type="button" class="btn">추가</button>
                         </a>
                     </td>
                     <td>
-                        <a th:href="@{/seller/templates/event/update/{eventId}(eventId=${event.eventId})}">
+                        <a th:href="@{/seller/templates/events/{eventId}/update(eventId=${event.eventId})}">
                             <button type="button" class="btn">수정</button>
                         </a>
                     </td>
                     <td>
-                        <a th:href="@{/seller/templates/event/delete/{eventId}(eventId=${event.eventId})}"
+                        <a th:href="@{/seller/templates/events/{eventId}(eventId=${event.eventId})}"
                            th:method="delete">
                             <button type="button" class="btn">삭제</button>
                         </a>
