[fix] 셀러 페이지 버튼 레퍼런스 수정, 이벤트 추가 기능 수정

--- a/src/main/resources/templates/seller/blacklist-demand.html
+++ b/src/main/resources/templates/seller/blacklist-demand.html
@@ -30,9 +30,9 @@
 <nav class="menus">
     <ul>
         <a href="/seller/templates/lineup">줄서기 현황</a>
-        <a href="/seller">매장 관리</a>
-        <a href="/menu">메뉴</a>
-        <a href="/event">이벤트</a>
+        <a href="/seller/templates/seller">매장 관리</a>
+        <a href="/seller/templates/menu">메뉴</a>
+        <a href="/seller/templates/event">이벤트</a>
         <a href="/seller/templates/blacklist-demands" style="color: #8B60C7">블랙리스트</a>
     </ul>
 </nav>
